# postavka_bot

./: .env.example  .gitignore  CLAUDE.md  OZON_API_USAGE.md  WORKLOG.md  alembic.ini  pyproject.toml  План_автоматизации_ФФ.docx  ТЗ Приемка шаблон.xlsx
alembic/: env.py
alembic/versions/: 1712be522354_init_schema.py  1d4b0ab4021c_add_target_dates_json.py  1e9a33933f2c_add_ozon_dropoff_name.py  390d74561795_add_target_hours_json_to_shipment_.py  395100f32bea_add_ozon_supply_status_to_shipment_item.py  3eab6656f631_multi_tenant_users.py  4942066afe35_add_drop_off_warehouse_name_to_ozon_.py  724b68d0a132_ozon_products_and_wb_products_separation.py  86b1ae89042f_add_ozon_supply_type_to_shipment_.py  a3f9c7d21e45_add_slot_date_to.py  a92f1c5d7e84_add_auto_book_mode.py  b39bace394a5_add_point_type_to_favorites.py  b8d2e7a91f02_composite_unique_user_data.py  b8e1a4c52d11_add_slot_dates_and_mp_ids.py  c4d2f8a9e7b3_shipment_requests.py  c4f2e9b1a3d8_encrypt_user_tokens.py  d5f81b2a9c44_add_ozon_sku.py  def8b4c90776_ozon_drafts_and_favorite_crossdock_.py  e799858ae69c_add_product_hints.py  f656310611e6_add_cargo_format.py
data/: test_export_supply.xlsx
deploy/: README.md  backup.sh  postavka-bot.service
scripts/: extract_wb_pdfs.py  seed_catalog.py
src/: config.py  warehouses.py
src/bot/: helpers.py  keyboards.py  main.py  middleware.py  states.py
src/db/: models.py  session.py
src/generators/: __init__.py  hints_template.py  new_request_template.py  ship_tz.py  tz_otgruzka.py  tz_priemka.py
tests/: test_auto_book.py  test_generators.py  test_parsers.py
(+47 files in other folders)
