[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "postavka-assistant-bot"
version = "0.1.0"
description = "Telegram bot for fulfillment supply automation (WB + Ozon)"
requires-python = ">=3.10"
dependencies = [
    "aiogram>=3.4,<4",
    "sqlalchemy>=2.0,<3",
    "alembic>=1.13,<2",
    "pandas>=2.1,<3",
    "openpyxl>=3.1,<4",
    "xlrd==2.0.1",
    "anthropic>=0.40,<1",
    "python-dotenv>=1.0,<2",
    "pydantic>=2.5,<3",
    "httpx>=0.27,<1",
    "httpx-socks>=0.8,<1",
    "aiohttp-socks>=0.9,<1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
]

[project.scripts]
postavka-bot = "src.bot.main:run"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 110
target-version = "py310"
